tests/declare_var/declare_var.exp
Error: test.js:4
  4: (null: T); // error: null ~> number
      ^^^^ null. This type is incompatible with
  4: (null: T); // error: null ~> number
            ^ number


Found 1 error
